--- a/src/css/weekday.styl
+++ b/src/css/weekday.styl
@@ -8,6 +8,7 @@
 
     .{css-prefix}weekday-schedule
         margin: 0 10px
+        
 
     .{css-prefix}today
         background: none
@@ -22,6 +23,11 @@
             color: #fff
             font-weight: bold
             margin-left: 2px
+
+@keyframes zoomin {
+	from {transform: scale(0.9);}
+	to {transform: scale(1);}
+}
 
 +prefix-classes(weekday)
     .grid,
@@ -50,6 +56,7 @@
             wh(27px, 27px)
             line-height: 27px
             text-align: center
+            
 
         .grid-more-schedules
             float: right
@@ -67,6 +74,7 @@
         wh(100%, 100%)
         position: absolute
         overflow-y: scroll
+     
 
     .schedules
         pos(0, 0)
@@ -74,14 +82,17 @@
         position: absolute
         font-size: 12px
         overflow-y: scroll
+       
 
     .schedule-block
         position: absolute
+        
 
     .schedule-block-dragging-dim
         opacity: 0.3
 
     .schedule
+        
         position: relative
         margin: 0 10px 0 1px
         cursor: pointer
@@ -101,7 +112,7 @@
         top: 6px
         left: 0
         border-radius: 50%
-
+        
     .schedule-bullet-focused
         left: 10px
         background: #ffffff
